--- a/views/app/my/sidebar.html
+++ b/views/app/my/sidebar.html
@@ -3,37 +3,37 @@
     <ul class="social-link">
         <li>
             <a href="#" class="facebook">
-                <span class="s-icon left"><i class="icofont icofont-social-facebook"></i></span>
-                <span class="s-name">Facebook</span>
-                <span class="s-likes right">53K</span>
+                <span class="s-icon left"><i class="icofont icofont-social-qq"></i></span>
+                <span class="s-name">  Q    Q  </span>
+                <span class="s-likes right">@Mreminisce</span>
             </a>
         </li>
         <li>
             <a href="#" class="twitter">
-                <span class="s-icon left"><i class="icofont icofont-social-twitter"></i></span>
-                <span class="s-name">Twitter</span>
-                <span class="s-likes right">652</span>
+                <span class="s-icon left"><i class="icofont icofont-social-wechat"></i></span>
+                <span class="s-name"> 微  信 </span>
+                <span class="s-likes right">@舟</span>
             </a>
         </li>
         <li>
             <a href="#" class="google-plus">
-                <span class="s-icon left"><i class="icofont icofont-social-google-plus"></i></span>
-                <span class="s-name">Google+</span>
-                <span class="s-likes right">25K</span>
+                <span class="s-icon left"><i class="icofont icofont-music-disk"></i></span>
+                <span class="s-name">网易云</span>
+                <span class="s-likes right">@Mreminisce</span>
             </a>
         </li>
         <li>
             <a href="#" class="instagram">
-                <span class="s-icon left"><i class="icofont icofont-social-instagram"></i></span>
-                <span class="s-name">Instagram</span>
-                <span class="s-likes right">10K</span>
+                <span class="s-icon left"><i class="icofont icofont-ui-video-play"></i></span>
+                <span class="s-name">Bilibili</span>
+                <span class="s-likes right">@Mreminisce</span>
             </a>
         </li>
         <li>
             <a href="#" class="dribbble">
-                <span class="s-icon left"><i class="icofont icofont-social-dribbble"></i></span>
-                <span class="s-name">Dribbble</span>
-                <span class="s-likes right">543</span>
+                <span class="s-icon left"><i class="icofont icofont-social-github"></i></span>
+                <span class="s-name">Github</span>
+                <span class="s-likes right">@Mreminisce</span>
             </a>
         </li>
     </ul>
