--- a/views/admin/auser/user_add.html
+++ b/views/admin/auser/user_add.html
@@ -1,53 +1,64 @@
 {{ template "layout/adminheader" .}}
-<main id="body">
+<section id="contact-section" class="contact-section w100dt mb-50">
 	<div class="container">
+		<div class="row">			
+			<nav class="breadcrumb-nav w100dt">
+				<div class="center" role="group">
+					<a class="btn-flat active" href="/admin/index.html">后台首页</a>
+					<a class="btn-flat active" href="/admin/user/list.html">用户列表</a>
+					<a class="btn active" href="/admin/user/create.html">创建用户</a>
+				</div>
+			</nav>
+		</div><br>
 		<div class="row">
-			<div class="col-lg-8 mx-auto">
-				<div class="btn-group mb-3" role="group">
-					<a role="button" class="btn btn-secondary" href="/admin/user/list.html">用户列表</a>
-					<a role="button" class="btn btn-secondary" href="/admin/user/group.html">用户组</a>
-					<a role="button" class="btn btn-secondary active" href="/admin/user/create.html">创建用户</a>
-				</div>
-				<div class="card">
-					<div class="card-body">
-						<!--
-                        <h4 class="card-title">创建用户</h4>
-                        -->
-						<form action="/admin/user/add" method="post" id="form">
-							<div class="form-group row">
-								<label class="col-sm-2 form-control-label">用户名：</label>
-								<div class="col-sm-10">
-									<input type="text" name="username" id="username" placeholder="" value="" class="form-control"> </div>
-							</div>
-							<div class="form-group row">
-								<label class="col-sm-2 form-control-label">密码：</label>
-								<div class="col-sm-10">
-									<input type="password" name="password" id="password" class="form-control" value=""> </div>
-							</div>
-							<div class="form-group row">
-								<label class="col-sm-2 form-control-label">用户组：</label>
-								<div class="col-sm-10">
-									<select name="group_id" class="custom-select" id="_gid">
-										{{range .groupList}}
-										<option value="{{.ID}}">{{.Name}}</option>
-										{{end}}
-									</select>
+			<div class="col m12 s12">
+				<div class="contact-me">
+					<div class="row">
+						<div class="col m1 s12"></div>
+						<div class="col m10 s12">
+							<div class="sidebar-title left-align">
+								<h5><i class="icofont icofont-ui-edit"></i> 创建用户：</h5>
+							</div><br>
+							<div class="contact-input">
+								<div class="c-text p-0">
+									<form action="/admin/user/add" method="post" id="form" class="contact-form">
+										<input type="hidden" name="userid" value="{{.userinfo.ID}}">
+										<i class="icofont icofont-lock"> 用户名：</i>
+										<div class="contact-input">
+											<input type="text" name="username" id="username" placeholder="" class="validate">
+										</div>
+										<i class="icofont icofont-lock"> 密码：</i>
+										<div class="contact-input input-group">
+											<input type="password" name="password" id="password" class="validate" value="">
+										</div>
+										<div class="contact-input">
+											<select name="group_id" id="_gid">
+												{{range .groupList}}
+												<option value="{{.ID}}">{{.Name}}</option>
+												{{end}}
+											</select>
+										</div>
+										<div>
+											<button type="button" class="waves-effect waves-light right" id="submit" data-loading-text="正在提交...">确认创建</button>
+											<a role="button" class="btn" href="javascript:history.back();">返回</a>
+										</div>
+									</form>		
 								</div>
 							</div>
-							<div class="form-group row">
-								<label class="col-sm-2 form-control-label"></label>
-								<div class="col-sm-10">
-									<button type="button" class="btn btn-primary btn-block" id="submit" data-loading-text="正在提交...">确定</button>
-									<a role="button" class="btn btn-secondary btn-block mt-3" href="javascript:history.back();">返回</a>
-								</div>
-							</div>
-						</form>
+						</div>
+						<!-- colsm6 -->
 					</div>
+					<!-- row -->
 				</div>
+				<!-- /.contact-me -->
 			</div>
+			<!-- colm9 -->
 		</div>
+		<!-- row -->
 	</div>
-</main>
+	<!-- container -->
+</section>
+
 <script>
 	var jform = $('#form');
 	var jsubmit = $('#submit');
