--- a/views/admin/saying/asayinglist.html
+++ b/views/admin/saying/asayinglist.html
@@ -1,47 +1,56 @@
 {{ template "layout/adminheader" .}}
-<main id="body">
+<section id="contact-section" class="contact-section w100dt mb-50">
 	<div class="container">
-		<div class="row">
-			<div class="col-lg-12 mx-auto">
-				<div class="card">
-					<div class="card-header">
-						<ul class="nav nav-tabs card-header-tabs">
-							<li class="nav-item">
-								<a class="nav-link " href="./"> 文章列表 </a>
-							</li>
-						</ul>
-					</div>
-					<div class="card-body">
-						<ul id="sayinglist" class="list-unstyled sayinglist mb-0">
-							{{range .sayings}}
-							<li class="media saying tap  " data-href="/saying/{{.ID}}/detail.html" data-tid="2">
-								<a href="/saying/{{.ID}}/detail.html" tabindex="-1" class="ml-1 mt-1 mr-3">
-									<img class="avatar-3" src="{{.User.Avatar}}">
-								</a>
-								<div class="media-body">
-									<div class="d-flex justify-content-between small mt-1">
-										<div>
-											<span class="username text-grey mr-1  hidden-sm" uid="2134">{{.User.Username}}</span>
-											<span class="date text-grey hidden-sm">{{.CreatedAt}}</span>
-										</div>
-										<div class="text-muted small">
-											<span class="ml-2"><i class="icon-eye"></i> {{.ViewsCnt}}</span>
-											<span class="ml-2"><i class="icon-comment-o"></i> {{.CommentsCnt}}</span>
-											<span class="ml-2"><a onclick="delet(this, {{.ID}})" href="#" class="btn btn-danger  btn-sm">删除</a></span>
-										</div>
-									</div>
-								</div>
-							</li>
-							{{end}}
-						</ul>
-					</div>
+		<div class="row">			
+			<nav class="breadcrumb-nav w100dt">
+				<div class="center" role="group">
+					<a class="btn-flat active" href="/admin/index.html">后台首页</a>
+					<a class="btn-flat active" href="/admin/article/list.html?type=1&status=0">所有文章</a>
+					<a class="btn active" href="/admin/saying/list.html?type=1&status=0">所有说说</a>
 				</div>
-			</div>
-			<div class="col-lg-3 hidden-sm hidden-md">
+			</nav>
+		</div><br>
+		<div class="row">
+			<div class="card">
+				<div class="table-responsive">
+					<table class="table" style="min-width: 800px">
+						<thead>
+							<tr>
+								<th></th>
+								<th width="60"><h5>序号</h5></th>
+								<th width="120"><h5>作者</h5></th>
+								<th width="200"><h5>内容</h5></th>
+								<th width="200"><h5>发表时间</h5></th>
+								<th width="200"><h5>更新时间</h5></th>
+								<th width="70"><h5>浏览数</h5></th>
+								<th width="70"><h5>回复数</h5></th>
+								<th width="80"><h5></h5></th>
+								<th width="80"><h5>删除</h5></th>
+							</tr>
+						</thead>
+						<tbody id="sayinglist">
+							{{range .sayings}}
+							<tr uid="{{.ID}}">
+								<td></td>
+								<td>{{.ID}}</td>
+								<td uid="{{.User.ID}}">{{.User.Username}}</td>
+								<td><a href="/saying/{{.ID}}/detail.html">000</a></td>
+								<td>{{.CreatedAt.Format "2006.01.02  15:04:05"}}</td>
+								<td>{{.UpdatedAt.Format "2006.01.02  15:04:05"}}</td>
+								<td>{{.ViewsCnt}}</td>
+								<td>{{.CommentsCnt}}</td>
+								<td></td>
+								<td><a onclick="delet(this, {{.ID}})" href="#" class="btn">删除</a></td>
+							</tr>
+							{{end}}
+						</tbody>
+					</table>
+				</div>
 			</div>
 		</div>
 	</div>
-</main>
+</section>
+
 <script>
 	// 删除
 	function delet(elem, sayingid) {
@@ -54,6 +63,10 @@
 			success: function(res) {
 				if (res.code == 200) {
 					$(elem).parent().parent().parent().parent().parent().remove()
+					$.alert("说说删除成功 ！")
+					setTimeout(function () {
+                        location.reload()
+                    }, 500)
 				} else {
 					$.alert(res.message)
 				}
