--- a/views/app/layout/footer.html
+++ b/views/app/layout/footer.html
@@ -3,18 +3,16 @@
 <footer id="footer-section" class="footer-section w100dt">
 	<div class="container">
 		<ul class="footer-social-links w100dt center-align mb-30">
-			<li><a href="#" class="facebook">FACEBOOK</a></li>
-			<li><a href="#" class="twitter">TWITTER</a></li>
-			<li><a href="#" class="google-plus">GOOGLE+</a></li>
-			<li><a href="#" class="linkedin">LINKDIN</a></li>
-			<li><a href="#" class="pinterest">PINTEREST</a></li>
-			<li><a href="#" class="instagram">INSTAGRAM</a></li>
+			<li><a href="#" class="linkedin" title="@Mreminisce">QQ&nbsp;</a></li>
+			<li><a href="#" class="twitter" title="@舟">微信&nbsp;</a></li>
+			<li><a href="#" class="google-plus" title="1285149688@qq.com">邮箱&nbsp;</a></li>
+			<li><a href="https://music.163.com/#/user/home?id=1333662282" class="pinterest" title="@Mreminisce">网易云</a></li>
+			<li><a href="https://space.bilibili.com/4411497" class="instagram" title="@Mreminisce">Bilibili</a></li>
+			<li><a href="https://github.com/Mreminisce" class="facebook" title="@Mreminisce">Github</a></li>
 		</ul>
 		<p class="center-align">
-			<i class="icofont icofont-heart-alt l-blue"></i> All Right Reserved, Deasined by <a href="#" class="l-blue">HTMLmate</a>
-			- More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/"
-			 title="网页模板" target="_blank">网页模板</a> - More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a>
-			- Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a>
+			<i class="icofont icofont-ssl-security"></i> - 
+			<a href="http://www.beian.miit.gov.cn">赣ICP备 - 19006549 号</a>
 		</p>
 	</div>
 	<!-- container -->
