--- a/views/app/layout/header.html
+++ b/views/app/layout/header.html
@@ -27,17 +27,18 @@
 							{{end}}
 							<li><a id="logout" href="#">退出</a></li>
 							{{else}}
-							<li><a href="/login.html">登录</a></li>
+							<li><a href="/login.html">登录/注册</a></li>
 							{{end}}
 						</ul>
 						<!-- /.main-menu -->
 						<!-- ******************** sidebar-menu ******************** -->
 						<ul class="side-nav" id="mobile-demo">
 							<li class="snavlogo center-align"><img src="/static/img/logo.png" alt="logo"></li>
-							<li class="active"><a href="/">首页</a></li>
+							<li><a href="/">首页</a></li>
 							<li><a href="/sayings">说说</a></li>
 							{{if .islogin}}
-							<li><a href="/my.html">{{.sessions.Username}}</a></li>
+							<li><a href="/my_favorite.html">个人中心</a></li>
+							<li class="active"><a href="/my.html">{{.sessions.Username}}</a></li>
 							{{if eq .sessions.Isadmin "1"}}
 							<li><a id="adminindex" href="/admin/index.html">后台管理</a></li>
 							{{end}}
