--- a/views/app/layout/header.inc.html
+++ b/views/app/layout/header.inc.html
@@ -8,6 +8,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 		<meta http-equiv="Cache-Control" content="no-transform">
 		<meta http-equiv="Cache-Control" content="no-siteapp">
+		<link rel="icon" sizes="32x32" href="/static/img/web.ico">
 		<title>{{.webname}}</title>
 		<!-- css include -->
 		<link rel="stylesheet" type="text/css" href="/static/css/materialize.css">
