--- a/views/app/my/my_comment.html
+++ b/views/app/my/my_comment.html
@@ -6,9 +6,9 @@
 				<div class="center" role="group">
 					<a class="btn-flat active" href="/my_favorite.html">我的收藏</a>
 					<a class="btn-flat active" href="/my_article.html">我的文章</a>
-					<a class="btn active" href="/my_reply.html">我的回复</a>
+					<a class="btn-flat active" href="/my_reply.html">我的回复</a>
 					<a class="btn-flat active" href="/my_saying.html">我的说说</a>
-					<a class="btn-flat active" href="/my_comment.html">我的评论</a>
+					<a class="btn active" href="/my_comment.html">我的评论</a>
 				</div>
 			</nav>
 		</div><br>
