--- a/views/app/layout/header.inc.html
+++ b/views/app/layout/header.inc.html
@@ -8,7 +8,9 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 		<meta http-equiv="Cache-Control" content="no-transform">
 		<meta http-equiv="Cache-Control" content="no-siteapp">
-		<link rel="icon" sizes="32x32" href="/static/img/web.ico">
+		<link rel="shortcut icon" href="/static/m.ico">
+    	<link rel="icon" sizes="32x32" href="/static/m.ico">
+    	<link rel="Bookmark" href="/static/m.ico">
 		<title>{{.webname}}</title>
 		<!-- css include -->
 		<link rel="stylesheet" type="text/css" href="/static/css/materialize.css">
