--- a/views/app/article/newarticle.html
+++ b/views/app/article/newarticle.html
@@ -12,7 +12,7 @@
 					</div>
 					<div class="nav-wrapper right">
 						<a href="/" class="breadcrumb">首页</a>
-						<a href="/newsaying.html" class="breadcrumb active">写说说</a>
+						<a href="#" class="breadcrumb active">写文章</a>
 					</div>
 					<!-- /.nav-wrapper -->
 				</nav><br>
@@ -43,7 +43,7 @@
 								</div>
 								{{end}}
 								<div class="right">
-									<button type="button" class="btn btn-primary" id="articlesubmit" data-loading-text="正在提交..."> 提交 </button>
+									<button type="button" class="btn btn-primary" id="articlesubmit" data-loading-text="正在提交..."> 发表文章 </button>
 								</div>
 							</div>
 						</form>
