--- a/views/app/layout/header.html
+++ b/views/app/layout/header.html
@@ -13,11 +13,11 @@
 					</div>
 					<!-- logo -->
 					<div>
-						<a href="#" data-activates="mobile-demo" class="button-collapse">
+						<a href="#" data-activates="mobile-demo" class="button-collapse" style="float: left;left: 15px;">
 							<i class="icofont icofont-navigation-menu"></i>
 						</a>
-						<ul id="nav-mobile" class="main-menu center-align hide-on-med-and-down">
-							<li><a href="/">首页</a></li>
+						<ul class="main-menu center-align hide-on-med-and-down" id="nav-mobile">
+							<li><a href="/articles">文章</a></li>
 							<li><a href="/sayings">说说</a></li>
 							{{if .islogin}}
 							<li><a href="/my_favorite.html">个人中心</a></li>
@@ -33,8 +33,10 @@
 						<!-- /.main-menu -->
 						<!-- ******************** sidebar-menu ******************** -->
 						<ul class="side-nav" id="mobile-demo">
-							<li class="snavlogo center-align"><img src="/static/img/logo.png" alt="logo"></li>
-							<li><a href="/">首页</a></li>
+							<li class="snavlogo center-align">
+								<a href="/"><img src="/static/img/logo.png" alt="logo"></a>
+							</li>
+							<li><a href="/articles">文章</a></li>
 							<li><a href="/sayings">说说</a></li>
 							{{if .islogin}}
 							<li><a href="/my_favorite.html">个人中心</a></li>
@@ -42,10 +44,16 @@
 							{{if eq .sessions.Isadmin "1"}}
 							<li><a id="adminindex" href="/admin/index.html">后台管理</a></li>
 							{{end}}
-							<li><a id="logout" href="#">退出</a></li>
+							<li><a id="mlogout" href="#">退出</a></li>
 							{{else}}
-							<li><a href="/login.html">登录</a></li>
+							<li><a href="/login.html">登录/注册</a></li>
 							{{end}}
+						</ul>
+						<a href="#" data-activates="mobile-new" class="button-collapse" style="float: right;right: 15px;">
+							<i class="icofont icofont-ui-add"></i>
+						</a>
+						<ul class="" id="mobile-new">
+							<li><a href="/login.html">登录/注册</a></li>
 						</ul>
 					</div>
 					<!-- main-menu -->
@@ -75,10 +83,14 @@
             }, 500)
         });
     })
-    if ({{.fid }}) {
-        $('#fid-{{.fid}}').addClass('active');
-    } else {
-        $('#fid-0').addClass('active');
-    }
+	$("#mlogout").on('click', function () {
+        $.xget("/api/logout", function (code, message) {
+            console.log(code, message)
+            alert("退出成功")
+            setTimeout(function () {
+                location.href = "/"
+            }, 500)
+        });
+    })
 </script>
 {{ end }}
