--- a/views/app/saying/newsaying.html
+++ b/views/app/saying/newsaying.html
@@ -12,7 +12,7 @@
 					</div>
 					<div class="nav-wrapper right">
 						<a href="/" class="breadcrumb">首页</a>
-						<a href="/newsaying.html" class="breadcrumb active">写文章</a>
+						<a href="#" class="breadcrumb active">写说说</a>
 					</div>
 					<!-- /.nav-wrapper -->
 				</nav><br>
@@ -30,7 +30,7 @@
 							
 							<div class="d-flex justify-content-between">
 								<div class="right">
-									<button type="button" class="btn btn-primary" id="sayingsubmit" data-loading-text="正在提交..."> 提交 </button>
+									<button type="button" class="btn btn-primary" id="sayingsubmit" data-loading-text="正在提交..."> 发表说说 </button>
 								</div>
 							</div>
 						</form>
