--- a/views/app/article/article.html
+++ b/views/app/article/article.html
@@ -38,7 +38,7 @@
 								{{end}}
 							</ul>
 							<p class="w100dt mb-10" isfirst="1">
-								<hr>{{.freply.Message | unescaped}}
+								<hr>{{.freply.Message | unescaped}}<br><br><br>
 							</p>
 							{{if .attachs}}
 							<fieldset class="fieldset">
@@ -154,7 +154,9 @@
 					</form>
 					{{else}}
 					<li class="reply newreply media">
-						<a role="button" class="btn btn-default btn-block xn-back col-lg-6 mx-auto mb-3" target="_blank" href="/login.html">登录后可回复</a>
+						<a role="button" class="btn btn-block" target="_blank" href="/login.html">
+							登录后可回复
+						</a><br>
 					</li>
 					{{end}}
 					<!-- /.comment-area -->
@@ -163,68 +165,9 @@
 			</div>
 			<!-- colm8 -->
 			<div class="col s12 m4 l4">
-				<div class="sidebar-testimonial mb-30">
-					<div class="sidebar-title center-align">
-						<h2>Hi Its Me!</h2>
-					</div>
-					<!-- /.sidebar-title -->
-					<div class="carousel carousel-slider center" data-indicators="true">
-						<div class="carousel-item">
-							<div class="item-img">
-								<span>R</span>
-							</div>
-							<h2>Rakibul Hassan</h2>
-							<small>Web Design & Development</small>
-							<p> Sedut perspiciatis unde omnis iste natus errorsit voluptatem accusantium doloremque. </p>
-						</div>
-					</div>
-				</div>
-				<!-- /.sidebar-testimonial -->
-				<div class="sidebar-followme w100dt mb-30">
-					<div class="sidebar-title center-align">
-						<h2>Follow Me</h2>
-					</div>
-					<!-- /.sidebar-title -->
-					<ul class="followme-links w100dt">
-						<li class="mrb15">
-							<a href="#" class="facebook">
-								<i class="icofont icofont-social-facebook"></i>
-								<small class="Followers white-text">105 Likes</small>
-							</a>
-						</li>
-						<li class="mrb15">
-							<a href="#" class="twitter">
-								<i class="icofont icofont-social-twitter"></i>
-								<small class="Followers white-text">50 Follows</small>
-							</a>
-						</li>
-						<li>
-							<a href="#" class="google-plus">
-								<i class="icofont icofont-social-google-plus"></i>
-								<small class="Followers white-text">39 Follows</small>
-							</a>
-						</li>
-						<li class="mrb15">
-							<a href="#" class="linkedin">
-								<i class="icofont icofont-brand-linkedin"></i>
-								<small class="Followers white-text">50 Follows</small>
-							</a>
-						</li>
-						<li class="mrb15">
-							<a href="#" class="pinterest">
-								<i class="icofont icofont-social-pinterest"></i>
-								<small class="Followers white-text">50 Follows</small>
-							</a>
-						</li>
-						<li>
-							<a href="#" class="instagram">
-								<i class="icofont icofont-social-instagram"></i>
-								<small class="Followers white-text">39 Likes</small>
-							</a>
-						</li>
-					</ul>
-				</div>
-				<!-- /.sidebar-followme -->
+				{{ template "layout/addnewarticle" .}}
+				<br>
+				{{ template "layout/sidebar" }}
 			</div>
 			<!-- colm4 -->
 		</div>
