--- a/views/app/article/newarticle.html
+++ b/views/app/article/newarticle.html
@@ -168,7 +168,7 @@
 				afterAddNewArticle()
 				alert(message);
 				setTimeout(function() {
-					location.href = "/"
+					location.href = "/articles"
 				}, 500)
 			} else {
 				$.alert(message)
