--- a/views/app/index/index.html
+++ b/views/app/index/index.html
@@ -8,32 +8,39 @@
                 {{$sesid := .sessions.Userid}}
                 {{ range .articleList }}
                 <div class="blogs mb-30">
-                    <div class="card">
-                        <div class="card-content w100dt">                                                     
+                    <div class="card"><br>
+                        <div class="card-content w100dt">
+                            <p>
+                                <a href="/article/{{.ID}}/detail.html" class="card-title">{{.Title}}</a> 
+                            </p>
+                            <p>
+                                <ul class="post-mate-time left">
+                                    <li>
+                                        <i class="icofont icofont-clock-time"></i> {{.CreatedAt.Unix | strtime}}
+                                    </li>
+                                    <li>
+                                        <i class="icofont icofont-time"></i> {{.UpdatedAt.Unix | strtime}}
+                                    </li>
+                                </ul>
+                            </p>                                              
+                        </div>
+                        <div class="card-content w100dt">
                             <ul class="post-mate-time left">
-								<a href="/article/{{.ID}}/detail.html" class="card-title">{{.Title}}</a> 
                                 <li>
                                     <p class="hero left"> By - <a href="{{if eq .User.ID $sesid}} /my.html {{else}}/user/{{.User.ID}}/info.html{{end}}" class="l-blue">{{.User.Username}}</a></p>
                                 </li>
-                                <li>
-									发布于<i class="icofont icofont-clock-time"></i>{{.CreatedAt.Unix | strtime}}
-                                </li>
-                                <li>
-									更新于<i class="icofont icofont-time"></i>{{.UpdatedAt.Unix | strtime}}
-								</li>
                             </ul>
-                            <ul class="post-mate right">
-								<br>
+                            <ul class="post-mate-time right">
                                 <li class="like">
-                                    <a href="#">
-                                        <i class="icofont icofont-eye-alt"></i> {{.ViewsCnt}}</a>
+                                    <i class="icofont icofont-eye-alt"></i> {{.ViewsCnt}}
                                 </li>
                                 <li class="comment">
-                                    <a href="#">
-                                        <i class="icofont icofont-comment"></i>{{.ReplysCnt}}</a>
+                                    <a href="/article/{{.ID}}/detail.html">
+                                        <i class="icofont icofont-comment"></i> {{.ReplysCnt}}
+                                    </a>
                                 </li>
-                            </ul>                                
-                        </div>                       
+                            </ul>
+                        </div><br>                   
                         <!-- /.card-content -->
                     </div>                  
                     <!-- /.card -->
